[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentping"
version = "0.1.0"
description = "Python SDK for AgentPing — escalation alerts for AI agents via SMS and voice calls."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://agentping.me"
Documentation = "https://agentping.me/docs"
Repository = "https://github.com/agentping/agentping-sdk"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
