[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentping-sdk"
version = "0.1.2"
description = "Python SDK for AgentPing — phone call alerts when your AI agent needs you."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://agentping.me"
Documentation = "https://agentping.me/docs"
Repository = "https://github.com/Sparkling-AI/agentping-sdk"

[tool.hatch.build.targets.wheel]
packages = ["agentping"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
